--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <!--Pybo CSS-->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
-    <title>Hello, Pybo!</title>
+    <title>파이보</title>
 </head>
 <body>
 <!-- 네비게이션바 -->
